DSS-4352: Alignment issue commingle cargo stowage (#2321)
* DSS-3571 design changes

* discharge info design changes

* vessel card height changes in shore dashboard

* DSS-4138 Ui issue in loading info dropdown

* design changes

* design changes rules page

* design changes

--- a/web/cpdss-portal/apps/cpdss/src/styles.scss
+++ b/web/cpdss-portal/apps/cpdss/src/styles.scss
@@ -3144,3 +3144,20 @@ textarea{
 .break-all {
   word-break: break-all;
 }
+
+.ullage-column.p-editable-column > div{
+ padding-right: 0;
+ .form-control{
+   width: calc(100% - 30px);
+   display: inline-block!important;
+ }
+ .error-icon{
+   position: relative!important;
+   display: inline-block!important;
+   right: auto;
+   margin-left: 4px;
+ }
+}
+.column-class.column-port{
+  min-width: 165px!important;
+}
